--- a/app/resources/sass/_contenido.scss
+++ b/app/resources/sass/_contenido.scss
@@ -6,6 +6,27 @@
   margin: -150px auto;
   position: relative;
 
-  border-radius: 10px;
+  border-radius: 0px;
   padding: 10px;
+
+
+  box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+
+  &:before, &:after
+  {
+    content:"";
+    position:absolute;
+    z-index:-1;
+    box-shadow:0 0 20px rgba(0,0,0,0.3);
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+  }
+
+  font-size: $monserrat;
+
+  .container {
+    width: 100%;
+  }
 }
